Add email service: implement Kafka consumer for email events and email management

--- a/.env
+++ b/.env
@@ -91,6 +91,7 @@ IMAGE_QUALITY=85
 # ===================================
 KAFKA_PORT_INTERNAL=9092
 KAFKA_BOOTSTRAP_SERVERS=["kafka-0:9092", "kafka-1:9092", "kafka-2:9092"]
+KAFKA_EMAIL_TOPIC=email-events
 
 # Kafka UI
 KAFKA_UI_PORT_INTERNAL=8000
