--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -239,6 +239,22 @@ services:
     networks:
       - app-network
 
+  email-service:
+    image: picaspot-email-service
+    container_name: email-service
+    build:
+      context: ./src/email-service
+      dockerfile: Dockerfile
+    env_file:
+      - ./.env
+    depends_on:
+      - kafka-0
+      - kafka-1
+      - kafka-2
+      - mailhog
+    networks:
+      - app-network
+
 volumes:
   postgres_data:
   redis-data:
