--- a/src/email-service/pyproject.toml
+++ b/src/email-service/pyproject.toml
@@ -5,7 +5,11 @@ description = "email-service"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
-    "aiokafka >= 0.12.0; sys_platform == 'linux'",
+    "aiokafka>=0.12.0; sys_platform == 'linux'",
+    "fastapi-mail>=1.6.0",
+    "pydantic>=2.10.3",
+    "pydantic-settings>=2.7.0",
+    "jinja2>=3.1.5",
 ]
 
 [tool.isort]
