--- a/src/email-service/pyproject.toml
+++ b/src/email-service/pyproject.toml
@@ -10,6 +10,14 @@ dependencies = [
     "pydantic>=2.10.3",
     "pydantic-settings>=2.7.0",
     "jinja2>=3.1.5",
+    "pytest>=8.0.0",
+    "pytest-asyncio>=0.23.0",
+]
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.2",
+    "pytest-asyncio>=0.24.0",
 ]
 
 [tool.isort]
@@ -35,3 +43,10 @@ ignore = [
     "B008", # do not perform function calls in argument defaults
     "C901", # complexity
 ]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = "test_*.py"
+python_classes = "Test*"
+python_functions = "test_*"
+addopts = "-v --tb=short --asyncio-mode=auto"
