--- a/src/email-service/pyproject.toml
+++ b/src/email-service/pyproject.toml
@@ -50,3 +50,4 @@ python_files = "test_*.py"
 python_classes = "Test*"
 python_functions = "test_*"
 addopts = "-v --tb=short --asyncio-mode=auto"
+pythonpath = ["."]
