Implement Kafka producer for email events: add asynchronous Kafka producer, define message schemas, and update environment configuration for verification and password reset topics

--- a/.env
+++ b/.env
@@ -85,14 +85,14 @@ IMAGE_THUMBNAIL_SIZE=[300, 300]
 IMAGE_MAX_DIMENSION=2048
 IMAGE_QUALITY=85
 
-
-# ===================================
 # Kafka (KRaft cluster)
-# ===================================
 KAFKA_PORT_INTERNAL=9092
 KAFKA_BOOTSTRAP_SERVERS=["kafka-0:9092", "kafka-1:9092", "kafka-2:9092"]
-KAFKA_EMAIL_TOPIC=email-events
 
 # Kafka UI
 KAFKA_UI_PORT_INTERNAL=8000
+
+# Kafka Topics
+KAFKA_VERIFICATION_EMAIL_TOPIC="verification-email-requests"
+KAFKA_PASSWORD_RESET_EMAIL_TOPIC="password-reset-email-requests"
 
