Add health check for Kafka services: update docker-compose to include health checks for Kafka services and adjust bootstrap server settings

--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -10,6 +10,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libc-dev \
     postgresql-client \
     zlib1g-dev \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 ENV UV_COMPILE_BYTECODE=1 \
