--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -74,11 +74,22 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+      kafka-0:
+        condition: service_started
+      kafka-1:
+        condition: service_started
+      kafka-2:
+        condition: service_started
     expose:
       - ${BACKEND_PORT_INTERNAL}
     build:
       context: ./src/backend
       dockerfile: Dockerfile
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -f http://localhost:${BACKEND_PORT_INTERNAL}/api/health || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   postgres:
     image: postgis/postgis:18-3.6-alpine
@@ -237,13 +248,15 @@ services:
 #    build:
 #      context: ./src/email-service
 #      dockerfile: Dockerfile
+#    volumes:
+#      - ./src/email-service/:/code
+#      - /code/.venv
 #    env_file:
 #      - ./.env
 #    depends_on:
 #      - kafka-0
 #      - kafka-1
 #      - kafka-2
-#      - mailhog
 #    networks:
 #      - app-network
 
