--- a/.env
+++ b/.env
@@ -14,6 +14,9 @@ BACKEND_DEBUG=true
 DOMAIN="localhost"
 ACCESS_TOKEN_EXPIRE_SECONDS=36000
 
+## Email Service
+EMAIL_SERVICE_NAME="PicASpotEmail"
+
 # Email (Mailhog)
 SMTP_USER="test@test.com"
 SMTP_PASSWORD="password"
@@ -96,3 +99,5 @@ KAFKA_UI_PORT_INTERNAL=8000
 KAFKA_VERIFICATION_EMAIL_TOPIC="verification-email-requests"
 KAFKA_PASSWORD_RESET_EMAIL_TOPIC="password-reset-email-requests"
 
+# Kafka Consumer Group
+KAFKA_EMAIL_CONSUMER_GROUP="email-service-consumers"
