--- a/src/email-service/pyproject.toml
+++ b/src/email-service/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "jinja2>=3.1.5",
     "pytest>=8.0.0",
     "pytest-asyncio>=0.23.0",
+    "fastapi[standard]>=0.124.0",
 ]
 
 [dependency-groups]
