Update email service configuration: add internal port variable and adjust health check and Dockerfile to use the new port

--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@ ACCESS_TOKEN_EXPIRE_SECONDS=36000
 
 ## Email Service
 EMAIL_SERVICE_NAME="PicASpotEmail"
+EMAIL_SERVICE_PORT_INTERNAL=8025
 
 # Email (Mailhog)
 SMTP_USER="test@test.com"
