--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -259,8 +259,10 @@ services:
       - kafka-2
     networks:
       - app-network
+    expose:
+        - ${EMAIL_SERVICE_PORT_INTERNAL}
     healthcheck:
-      test: [ "CMD-SHELL", "curl -f http://localhost:${BACKEND_PORT_INTERNAL}/health || exit 1" ]
+      test: [ "CMD-SHELL", "curl -f http://localhost:${EMAIL_SERVICE_PORT_INTERNAL}/health || exit 1" ]
       interval: 10s
       timeout: 5s
       retries: 5
