FIX: Nginx forwarding to https from http requests

--- a/src/nginx/conf/nginx.conf
+++ b/src/nginx/conf/nginx.conf
@@ -71,35 +71,9 @@ http {
             proxy_pass http://backend:${BACKEND_PORT_INTERNAL}/;
         }
 
-        # MailHog Web UI (Restricted Access)
-        location /dev/mailhog/ {
-            proxy_pass http://mailhog:${MAILHOG_UI_PORT_INTERNAL}/;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header X-Forwarded-Prefix /mailhog/;
-            proxy_connect_timeout 600;
-            proxy_send_timeout 600;
-            proxy_read_timeout 600;
-            send_timeout 600;
-        }
-
-
-        # Kafka UI (Development/Monitoring)
-        location /dev/kafka/ {
-            proxy_pass http://kafka-ui:${KAFKA_UI_PORT_INTERNAL}/dev/kafka/;
-
-            proxy_set_header Host $host;
-            proxy_redirect off;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-
-            # Kafka UI specific settings
-            proxy_connect_timeout 600;
-            proxy_send_timeout 600;
-            proxy_read_timeout 600;
-            send_timeout 600;
+        # Redirect all other HTTP requests to HTTPS
+        location / {
+            return 301 https://$host$request_uri;
         }
     }
 
