Add image processing module with converter and format support

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -63,6 +63,7 @@ services:
   backend:
     volumes:
       - ./src/backend/:/code
+      - ./src/img/:/img
       - /code/.venv
     env_file:
       - ./.env
