--- a/.env
+++ b/.env
@@ -80,9 +80,10 @@ MAX_UNLOCK_PHOTO_SIZE_MB=15
 ALLOWED_IMAGE_EXTENSIONS=["jpg", "jpeg", "png", "webp"]
 ALLOWED_MIME_TYPES=["image/jpeg", "image/png", "image/webp"]
 
-# Presigned URL Expiry (in seconds)
-PRESIGNED_UPLOAD_URL_EXPIRY_SECONDS=300
-PRESIGNED_DOWNLOAD_URL_EXPIRY_SECONDS=3600
+# Storage URL Expiry (in seconds)
+# 1 hour and 7 days respectively
+STORAGE_URL_DEFAULT_EXPIRY_SECONDS=3600
+STORAGE_URL_MAX_EXPIRY_SECONDS=604800
 
 # Image Processing Settings
 IMAGE_THUMBNAIL_SIZE=[300, 300]
