Add profile picture upload and retrieval functionality with static file support

--- a/.env
+++ b/.env
@@ -90,6 +90,9 @@ IMAGE_THUMBNAIL_SIZE=[300, 300]
 IMAGE_MAX_DIMENSION=2048
 IMAGE_QUALITY=85
 
+# Static Files Configuration
+STATIC_FILES_PATH=/code/static
+
 # Kafka (KRaft cluster)
 KAFKA_PORT_INTERNAL=9092
 KAFKA_BOOTSTRAP_SERVERS=["kafka-0:9092", "kafka-1:9092", "kafka-2:9092"]
