Add public URL support for MinIO storage: configure public access, update service methods to return public URLs, and enhance nginx settings for image access

--- a/.env
+++ b/.env
@@ -69,6 +69,7 @@ MINIO_EXTERNAL_ENDPOINT=localhost
 MINIO_SECURE=false
 MINIO_BUCKET_NAME=picaspot-storage
 MINIO_REGION=us-east-1
+MINIO_PUBLIC_URL=http://localhost/minio
 
 # Upload Limits (in MB)
 MAX_UPLOAD_SIZE_MB=10
