--- a/src/nginx/conf/nginx.conf
+++ b/src/nginx/conf/nginx.conf
@@ -71,6 +71,27 @@ http {
             proxy_pass http://backend:${BACKEND_PORT_INTERNAL}/;
         }
 
+        # MinIO Storage - Public access for images (HTTP)
+        location /minio/ {
+            client_max_body_size 0;
+            proxy_buffering off;
+            proxy_request_buffering off;
+
+            rewrite ^/minio/(.*)$ /$1 break;
+
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-NginX-Proxy true;
+
+            proxy_connect_timeout 300;
+            proxy_http_version 1.1;
+            chunked_transfer_encoding off;
+
+            proxy_pass http://minio;
+        }
+
         # Redirect all other HTTP requests to HTTPS
         location / {
             return 301 https://$host$request_uri;
@@ -129,6 +150,9 @@ http {
         ssl_prefer_server_ciphers on;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always; # Enable HSTS
 
+        # MinIO specific - allow special characters in headers
+        ignore_invalid_headers off;
+
         # General Optimizations
         tcp_nopush on;
         tcp_nodelay on;
@@ -164,6 +188,30 @@ http {
             add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,auth';
             limit_req zone=mylimit burst=20 nodelay; # Apply rate limiting
             proxy_pass http://backend:${BACKEND_PORT_INTERNAL}/;
+        }
+
+        # MinIO Storage - Public access for images
+        location /minio/ {
+            # Allow any size file to be uploaded
+            client_max_body_size 0;
+            # Disable buffering for better streaming
+            proxy_buffering off;
+            proxy_request_buffering off;
+
+            # Rewrite /minio/... to /...
+            rewrite ^/minio/(.*)$ /$1 break;
+
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-NginX-Proxy true;
+
+            proxy_connect_timeout 300;
+            proxy_http_version 1.1;
+            chunked_transfer_encoding off;
+
+            proxy_pass http://minio;
         }
 
         # MailHog Web UI (Restricted Access) - Uncomment if needed
