Add default image URLs to settings and update service methods to use them

--- a/.env
+++ b/.env
@@ -14,6 +14,9 @@ BACKEND_DEBUG=true
 DOMAIN="localhost"
 ACCESS_TOKEN_EXPIRE_SECONDS=36000
 
+DEFAULT_AREA_IMAGE_URL="http://localhost/static/img/default/area.png"
+DEFAULT_LANDMARK_IMAGE_URL="http://localhost/static/img/default/landmark.png"
+
 ## Email Service
 EMAIL_SERVICE_NAME="PicASpotEmail"
 EMAIL_SERVICE_PORT_INTERNAL=8025
