Add static file serving configuration to Nginx and update docker-compose for static files

--- a/src/nginx/conf/nginx.conf
+++ b/src/nginx/conf/nginx.conf
@@ -57,6 +57,14 @@ http {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_redirect off;
 
+        # Static Files
+        location /static/ {
+            alias /static/;
+            expires 30d;
+            add_header Cache-Control "public, immutable";
+            access_log off;
+        }
+
         # Backend API (Versioned Endpoints)
         location /api/ {
             add_header 'Access-Control-Allow-Origin' '*' always;
@@ -182,6 +190,14 @@ http {
 #             proxy_read_timeout 60;
 #         }
 #
+        # Static Files
+        location /static/ {
+            alias /static/;
+            expires 30d;
+            add_header Cache-Control "public, immutable";
+            access_log off;
+        }
+
         # Backend API (Versioned Endpoints)
         location /api/ {
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
