--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -119,6 +119,7 @@ services:
       - ./src/nginx/conf/nginx.conf:/etc/nginx/nginx.conf.template
       - ./src/nginx/entrypoint.sh:/etc/nginx/entrypoint.sh
       - ./src/nginx/certs/:/etc/nginx/certs/
+      - ./src/static:/static:ro
     environment:
       BACKEND_PORT_INTERNAL: ${BACKEND_PORT_INTERNAL}
       DOMAIN: ${DOMAIN}
