Add email service: implement Kafka consumer, email sending tasks, and email templates

--- a/.env
+++ b/.env
@@ -21,6 +21,10 @@ DEFAULT_LANDMARK_IMAGE_URL="http://localhost/static/img/default/landmark.png"
 EMAIL_SERVICE_NAME="PicASpotEmail"
 EMAIL_SERVICE_PORT_INTERNAL=8025
 
+## Image Service
+IMAGE_SERVICE_NAME="PicASpotImage"
+IMAGE_SERVICE_PORT_INTERNAL=8090
+
 # Email (Mailhog)
 SMTP_USER="test@test.com"
 SMTP_PASSWORD="password"
