--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -268,6 +268,30 @@ services:
       timeout: 5s
       retries: 5
 
+  image-service:
+    container_name: email-service
+    build:
+      context: ./src/image-service
+      dockerfile: Dockerfile
+    volumes:
+      - ./src/image-service/:/code
+      - /code/.venv
+    env_file:
+      - ./.env
+    depends_on:
+      - kafka-0
+      - kafka-1
+      - kafka-2
+    networks:
+      - app-network
+    expose:
+      - ${IMAGE_SERVICE_PORT_INTERNAL}
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -f http://localhost:${IMAGE_SERVICE_PORT_INTERNAL}/health || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
 volumes:
   postgres_data:
   redis-data:
