Add image verification Kafka topic and refactor consumer group settings

--- a/.env
+++ b/.env
@@ -112,5 +112,9 @@ KAFKA_UI_PORT_INTERNAL=8000
 KAFKA_VERIFICATION_EMAIL_TOPIC="verification-email-requests"
 KAFKA_PASSWORD_RESET_EMAIL_TOPIC="password-reset-email-requests"
 
+KAFKA_VERIFY_IMAGE_TOPIC="verify-image-requests"
+
 # Kafka Consumer Group
 KAFKA_EMAIL_CONSUMER_GROUP="email-service-consumers"
+
+KAFKA_IMAGE_CONSUMER_GROUP="image-service-consumers"
