--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -269,7 +269,7 @@ services:
       retries: 5
 
   image-service:
-    container_name: email-service
+    container_name: image-service
     build:
       context: ./src/image-service
       dockerfile: Dockerfile
