--- a/src/image-service/pyproject.toml
+++ b/src/image-service/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
     "fastapi[standard]>=0.124.4",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
-    "aiokafka>=0.12.0; sys_platform == 'linux'",
+    "aiokafka>=0.12.0",
     "geomatchai",
 ]
 
