--- a/src/image-service/pyproject.toml
+++ b/src/image-service/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "image-service"
 version = "0.1.0"
-description = "Add your description here"
+description = "Image verification service using GeoMatchAI"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
@@ -9,6 +9,8 @@ dependencies = [
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
     "aiokafka>=0.12.0",
+    "miniopy-async>=1.21",
+    "pillow>=11.0.0",
     "geomatchai",
 ]
 
