Add Mapillary API key to mock environment configuration

--- a/.env.mock
+++ b/.env.mock
@@ -98,6 +98,9 @@ IMAGE_THUMBNAIL_SIZE=[300, 300]
 IMAGE_MAX_DIMENSION=2048
 IMAGE_QUALITY=85
 
+# Image Service
+MAPILLARY_API_KEY="YOUR_MAPILLARY_API_KEY_HERE"
+
 # Static Files Configuration
 STATIC_FILES_PATH=/code/static
 
