--- a/src/image-service/Dockerfile
+++ b/src/image-service/Dockerfile
@@ -1,5 +1,18 @@
-# Image Service Dockerfile
-FROM python:3.13-slim
+# Image Service Dockerfile with NVIDIA CUDA support
+FROM nvidia/cuda:12.6.3-cudnn-runtime-ubuntu24.04
+
+# Install Python 3.13
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    software-properties-common \
+    && add-apt-repository ppa:deadsnakes/ppa \
+    && apt-get update && apt-get install -y --no-install-recommends \
+    python3.13 \
+    python3.13-dev \
+    python3.13-venv \
+    python3-pip \
+    && update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.13 1 \
+    && update-alternatives --install /usr/bin/python python /usr/bin/python3.13 1 \
+    && rm -rf /var/lib/apt/lists/*
 
 # Copy uv binary
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
