--- a/src/image-service/Dockerfile
+++ b/src/image-service/Dockerfile
@@ -1,7 +1,10 @@
 # Image Service Dockerfile with NVIDIA CUDA support
 FROM nvidia/cuda:12.6.3-cudnn-runtime-ubuntu24.04
 
-# Install Python 3.13
+# Copy uv binary first (doesn't require system packages)
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
+
+# Install Python 3.13 and system dependencies in a single layer
 RUN apt-get update && apt-get install -y --no-install-recommends \
     software-properties-common \
     && add-apt-repository ppa:deadsnakes/ppa \
@@ -9,16 +12,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     python3.13 \
     python3.13-dev \
     python3.13-venv \
-    python3-pip \
-    && update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.13 1 \
-    && update-alternatives --install /usr/bin/python python /usr/bin/python3.13 1 \
-    && rm -rf /var/lib/apt/lists/*
-
-# Copy uv binary
-COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
-
-# Install system dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends \
     gcc \
     g++ \
     make \
@@ -26,6 +19,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     zlib1g-dev \
     curl \
     git \
+    && update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.13 1 \
+    && update-alternatives --install /usr/bin/python python /usr/bin/python3.13 1 \
     && rm -rf /var/lib/apt/lists/*
 
 # Set environment variables for uv
