--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-picker/picker": "^2.11.4",
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/portal": "~1.3.0",
     "@rn-primitives/slot": "^1.2.0",
@@ -16,6 +17,7 @@
     "clsx": "^2.1.1",
     "expo": "^54.0.0",
     "expo-camera": "~17.0.9",
+    "expo-image-picker": "~17.0.10",
     "expo-linking": "~8.0.8",
     "expo-localization": "^17.0.7",
     "expo-location": "~19.0.7",
